fix styles * Details: ** hide visible submit button in <LoginPage> ** fix image-container that doesnt fill parent div (mobile screens)

--- a/src/styles/_CardPage.sass
+++ b/src/styles/_CardPage.sass
@@ -147,7 +147,7 @@
     width: 100%
     .person
       .image-container
-        width: 40vh
+        width: 100%
         height: 60vh
         &.like::after, &.nope::after
           padding: 4px 20px
@@ -160,8 +160,6 @@
   .card
     .person
       .image-container
-        width: 40vh
-        height: 60vh
         &.like::after, &.nope::after
           font-size: 3rem
       .about
