--- a/src/styles/_LoginPage.sass
+++ b/src/styles/_LoginPage.sass
@@ -125,9 +125,9 @@
         color: $gray
         background-color: $yellow
     button.hide
-      left: -30vw
+      left: -50vw
     a.find-match.hide
-      left: 130vw
+      left: 150vw
       
 @media (max-width:767px) and (orientation:landscape)
   .login
